# staex-iod

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
contracts/: Makefile  README.md
contracts/did/: Cargo.toml  Makefile  lib.rs
contracts/ink/: Makefile
contracts/ink/did/: Cargo.toml  lib.rs
deploy/: Dockerfile
peaq-client/: Cargo.toml  Makefile  README.md  build.rs
peaq-client/src/: document.rs  lib.rs  peaq_did.proto
peaq-gen/: Cargo.toml  Makefile  README.md
peaq-gen/assets/: peaq.metadata.json  peaq.metadata.scale
peaq-gen/src/: lib.rs  metadata.rs
provisioner/: .gitignore  Cargo.toml  Makefile  README.md  did.metadata.json
provisioner/assets/: did.metadata.json
provisioner/example-app/: .golangci.yaml  Makefile  README.md  go.mod  go.sum  main.go
provisioner/migrations/: 20240207111257_init.sql
provisioner/openapi/: openapi.yaml
provisioner/scripts/: sql_format.sh
provisioner/src/: balance.rs  child_process.rs  config.rs  did.rs  example_app.rs  indexer.rs  main.rs  main.rs.old.txt  mcc.rs  rbac.rs  staex_mcc.rs  sync_rbac.rs
ui/: Makefile  README.md  bun.lockb  index.html  jsconfig.json  package.json  run.sh  vite.config.js
ui/src/: App.vue
ui/src/assets/: main.css
ui/src/router/: index.js
ui/src/views/: DeviceView.vue  DevicesView.vue
