[package]
name = "peaq-client"
version = "0.1.0"
edition = "2021"

[dependencies]
peaq-gen = { path = "../peaq-gen" }
subxt = { workspace = true }
subxt-signer = { workspace = true }
rand = { version = "0.8.5", features = [], default-features = false }

[dev-dependencies]
tokio = { workspace = true }
