[package]
name = "peaq-client"
version = "0.1.0"
edition = "2021"

[dependencies]
peaq-gen = { path = "../peaq-gen" }
subxt = { workspace = true }
subxt-signer = { workspace = true }
rand = { version = "0.8.5", features = [], default-features = false }
bip39 = { version = "2.0.0", features = ["rand"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
