[package]
name = "provisioner"
version = "0.1.0"
edition = "2021"

[dependencies]
peaq-client = { path = "../peaq-client" }
peaq-gen = { path = "../peaq-gen" }
subxt = { workspace = true }
subxt-signer = { workspace = true }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
serde = { version = "1.0.196", features = [], default-features = false }
serde_json = { version = "1.0.113", features = [], default-features = false }
log = { version = "0.4.20", features = [], default-features = false }
env_logger = { version = "0.11.1", features = ["auto-color", "humantime"], default-features = false }
clap = { version = "4.4.18", features = ["std", "derive", "help"], default-features = false }
toml = { version = "0.8.10", features = ["parse", "display"], default-features = false }
sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "macros"], default-features = false }
